--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="grey_cool">#787887</color>
+    <color name="white">#ffffff</color>
 </resources>
