--- a/dotsloader/src/main/res/layout/dialog_loader.xml
+++ b/dotsloader/src/main/res/layout/dialog_loader.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
-    android:background="#11000000">
+    android:gravity="center">
 
     <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
         android:id="@+id/dialog_loader"
