--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,15 @@
 
     <color name="loader_defalut">#44ffffff</color>
     <color name="loader_selected">#ffffff</color>
+
+
+    <color name="pink_selected">#E91E63</color>
+    <color name="pink_default">#F8BBD0</color>
+    
+    <color name="purple_selected">#673AB7</color>
+    <color name="purple_default">#D1C4E9</color>
+
+    <color name="blue_selected">#2196F3</color>
+    <color name="blue_delfault">#BBDEFB</color>
+
 </resources>
