--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey_cool"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -15,10 +16,47 @@
     <!--<com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         app:loader_circleRadius="4dp"
         app:loader_dotsDist="2dp"
-        app:loader_isSingleDir="true"/>-->
+        app:loader_isSingleDir="true" />
+
+
+    <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:loader_animDur="1000"
+        app:loader_circleRadius="6dp"
+        app:loader_defaultColor="@color/pink_default"
+        app:loader_dotsDist="3dp"
+        app:loader_isSingleDir="false"
+        app:loader_selectedColr="@color/pink_selected" />
+
+
+    <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:loader_circleRadius="6dp"
+        app:loader_defaultColor="@color/blue_delfault"
+        app:loader_dotsDist="2dp"
+        app:loader_isSingleDir="true"
+        app:loader_selectedColr="@color/blue_selected" />
+
+
+    <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:loader_circleRadius="3dp"
+        app:loader_defaultColor="@color/purple_default"
+        app:loader_dotsDist="3dp"
+        app:loader_isSingleDir="true"
+        app:loader_selectedColr="@color/purple_selected" />-->
 
 </LinearLayout>
