--- a/dotsloader/src/main/res/values/attrs.xml
+++ b/dotsloader/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
 
     <declare-styleable name="ThreeDotsLoader">
         <attr name="loader_defaultColor" format="color" />
-        <attr name="loader_selectedColr" format="color" />
+        <attr name="loader_selectedColor" format="color" />
         <attr name="loader_circleRadius" format="dimension" />
         <attr name="loader_dotsDist" format="dimension" />
         <attr name="loader_isSingleDir" format="boolean" />
