--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
-    <!--<com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
+    <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         app:loader_circleRadius="4dp"
         app:loader_dotsDist="2dp"
         app:loader_isSingleDir="true" />
@@ -26,37 +26,37 @@
     <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         app:loader_animDur="1000"
         app:loader_circleRadius="6dp"
         app:loader_defaultColor="@color/pink_default"
         app:loader_dotsDist="3dp"
         app:loader_isSingleDir="false"
-        app:loader_selectedColr="@color/pink_selected" />
+        app:loader_selectedColor="@color/pink_selected" />
 
 
     <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         app:loader_circleRadius="6dp"
         app:loader_defaultColor="@color/blue_delfault"
         app:loader_dotsDist="2dp"
         app:loader_isSingleDir="true"
-        app:loader_selectedColr="@color/blue_selected" />
+        app:loader_selectedColor="@color/blue_selected" />
 
 
     <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         app:loader_circleRadius="3dp"
         app:loader_defaultColor="@color/purple_default"
         app:loader_dotsDist="3dp"
         app:loader_isSingleDir="true"
-        app:loader_selectedColr="@color/purple_selected" />-->
+        app:loader_selectedColor="@color/purple_selected" />
 
 </LinearLayout>
