--- a/dotsloader/src/main/res/layout/dialog_loader.xml
+++ b/dotsloader/src/main/res/layout/dialog_loader.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <com.agrawalsuneet.dotsloader.ui.ThreeDotsLoader
+    <com.agrawalsuneet.dotsloader.ui.DotsLoader
         android:id="@+id/dialog_loader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
