--- a/dotsloader/src/main/res/values/attrs.xml
+++ b/dotsloader/src/main/res/values/attrs.xml
@@ -9,6 +9,8 @@
         <attr name="loader_dotsDist" format="dimension" />
         <attr name="loader_isSingleDir" format="boolean" />
         <attr name="loader_animDur" format="integer" />
+        <attr name="loader_expandOnSelect" format="boolean" />
+        <attr name="loader_selectedRadius" format="dimension" />
     </declare-styleable>
 
 </resources>
