--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,13 +46,13 @@
         android:layout_marginTop="20dp"
         app:loader_animDur="1000"
         app:loader_circleRadius="6dp"
-        app:loader_selectedRadius="10dp"
         app:loader_defaultColor="@color/pink_default"
         app:loader_dotsDist="3dp"
         app:loader_expandOnSelect="true"
         app:loader_isSingleDir="false"
         app:loader_noOfDots="6"
-        app:loader_selectedColor="@color/pink_selected" />
+        app:loader_selectedColor="@color/pink_selected"
+        app:loader_selectedRadius="10dp" />
 
 
     <com.agrawalsuneet.dotsloader.ui.DotsLoader
