--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
-    <com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
+    <!--<com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -37,7 +37,6 @@
         app:loader_isSingleDir="false"
         app:loader_noOfDots="8"
         app:loader_selectedRadius="16dp" />
-
 
     <com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
         android:layout_width="wrap_content"
@@ -64,7 +63,7 @@
         app:loader_defaultColor="@color/blue_delfault"
         app:loader_dotsDist="6dp"
         app:loader_isSingleDir="true"
-        app:loader_selectedColor="@color/blue_selected" />
+        app:loader_selectedColor="@color/blue_selected" />-->
 
 
     <!--<com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
@@ -82,7 +81,7 @@
     <com.agrawalsuneet.dotsloader.ui.CircularDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:loader_animDur="100"
+        app:loader_animDur="1000"
         app:loader_bigCircleRadius="40dp"
         app:loader_circleRadius="12dp"
         app:loader_selectedRadius="24dp"
