--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,13 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_cool"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:gravity="center"
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
     <!--<com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
@@ -78,14 +79,14 @@
         app:loader_noOfDots="8"
         app:loader_selectedColor="@color/purple_selected" />-->
 
-    <com.agrawalsuneet.dotsloader.ui.CircularDotsLoader
+    <!--<com.agrawalsuneet.dotsloader.ui.CircularDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:loader_animDur="1000"
-        app:loader_bigCircleRadius="40dp"
-        app:loader_circleRadius="12dp"
-        app:loader_selectedRadius="24dp"
+        app:loader_animDur="100"
+        app:loader_showRunningShadow="true"
+        app:loader_bigCircleRadius="42dp"
+        app:loader_circleRadius="14dp"
         app:loader_selectedColor="@color/purple_selected"
-        app:loader_defaultColor="@color/purple_default"/>
+        app:loader_defaultColor="@color/purple_default"/>-->
 
 </LinearLayout>
