--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,14 +79,16 @@
         app:loader_noOfDots="8"
         app:loader_selectedColor="@color/purple_selected" />-->
 
-    <!--<com.agrawalsuneet.dotsloader.ui.CircularDotsLoader
+    <com.agrawalsuneet.dotsloader.ui.CircularDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:loader_animDur="100"
+        app:loader_animDur="1000"
         app:loader_showRunningShadow="true"
         app:loader_bigCircleRadius="42dp"
         app:loader_circleRadius="14dp"
         app:loader_selectedColor="@color/purple_selected"
-        app:loader_defaultColor="@color/purple_default"/>-->
+        app:loader_defaultColor="@color/purple_default"
+        app:loader_firstShadowColor="@color/pink_selected"
+        app:loader_secondShadowColor="@color/pink_default"/>
 
 </LinearLayout>
