--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="grey_cool">#787887</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 
     <color name="loader_defalut">#44ffffff</color>
     <color name="loader_selected">#ffffff</color>
