--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_cool"
+    android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
     <!--<com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
@@ -25,7 +25,8 @@
         app:loader_expandOnSelect="true"
         app:loader_isSingleDir="true"
         app:loader_noOfDots="5"
-        app:loader_selectedRadius="16dp" />
+        app:loader_selectedRadius="16dp"
+        app:loader_showRunningShadow="false" />
 
     <com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
         android:layout_width="wrap_content"
@@ -51,6 +52,7 @@
         app:loader_expandOnSelect="true"
         app:loader_isSingleDir="false"
         app:loader_noOfDots="6"
+
         app:loader_selectedColor="@color/pink_selected"
         app:loader_selectedRadius="20dp" />
 
@@ -64,10 +66,10 @@
         app:loader_defaultColor="@color/blue_delfault"
         app:loader_dotsDist="6dp"
         app:loader_isSingleDir="true"
-        app:loader_selectedColor="@color/blue_selected" />-->
+        app:loader_selectedColor="@color/blue_selected" />
 
 
-    <!--<com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
+    <com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -77,18 +79,28 @@
         app:loader_dotsDist="6dp"
         app:loader_isSingleDir="true"
         app:loader_noOfDots="8"
-        app:loader_selectedColor="@color/purple_selected" />-->
+        app:loader_selectedColor="@color/purple_selected" />
 
-   <!-- <com.agrawalsuneet.dotsloader.ui.CircularDotsLoader
+    <com.agrawalsuneet.dotsloader.ui.CircularDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:loader_animDur="1000"
-        app:loader_showRunningShadow="true"
         app:loader_bigCircleRadius="42dp"
         app:loader_circleRadius="14dp"
-        app:loader_selectedColor="@color/purple_selected"
         app:loader_defaultColor="@color/purple_default"
         app:loader_firstShadowColor="@color/pink_selected"
-        app:loader_secondShadowColor="@color/pink_default"/>-->
+        app:loader_secondShadowColor="@color/pink_default"
+        app:loader_selectedColor="@color/purple_selected"
+        app:loader_showRunningShadow="true" />
+
+    <com.agrawalsuneet.dotsloader.ui.CircularDotsLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:loader_animDur="1000"
+        app:loader_bigCircleRadius="42dp"
+        app:loader_circleRadius="14dp"
+        app:loader_defaultColor="@color/blue_delfault"
+        app:loader_selectedColor="@color/blue_selected"
+        app:loader_showRunningShadow="true" />-->
 
 </LinearLayout>
