--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     <com.agrawalsuneet.dotsloader.ui.LazyLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:lazyloader_dotsColor="@color/pink_selected"
+        app:lazyloader_dotsColor="@color/loader_selected"
         app:lazyloader_dotsDist="10dp"
         app:lazyloader_dotsRadius="16dp"
         app:lazyloader_animDur="2000"
