--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
 
-    <com.agrawalsuneet.dotsloader.ui.LazyLoader
+    <!--<com.agrawalsuneet.dotsloader.ui.LazyLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:lazyloader_dotsColor="@color/loader_selected"
@@ -25,7 +25,7 @@
         app:lazyloader_firstDelayDur="500"
         app:lazyloader_secondDelayDur="1000"
         android:layout_margin="20dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"/>-->
 
     <!--<com.agrawalsuneet.dotsloader.ui.LinearDotsLoader
         android:layout_width="wrap_content"
