refactor base classes

--- a/dotsloader/src/main/res/values/attrs.xml
+++ b/dotsloader/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="DotsLoader">
+    <declare-styleable name="DotsLoaderBaseView">
         <attr name="loader_defaultColor" format="color" />
         <attr name="loader_selectedColor" format="color" />
         <attr name="loader_circleRadius" format="dimension" />
