--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:all_animDur="1000"
-        app:all_dotsDist="3dp"
-        app:all_dotsRadius="10dp"
-        app:all_interpolator="@android:anim/accelerate_interpolator"
         app:tashieloader_animDelay="200"
+        app:tashieloader_animDur="1000"
+        app:tashieloader_dotsDist="3dp"
+        app:tashieloader_dotsRadius="10dp"
+        app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
         app:tashieloader_noOfDots="10" />
 
 
@@ -30,12 +30,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
-        app:all_animDur="1000"
-        app:all_dotsColor="@color/purple_selected"
-        app:all_dotsDist="5dp"
-        app:all_dotsRadius="20dp"
-        app:all_interpolator="@android:anim/accelerate_interpolator"
         app:tashieloader_animDelay="200"
+        app:tashieloader_animDur="1000"
+        app:tashieloader_dotsColor="@color/purple_selected"
+        app:tashieloader_dotsDist="5dp"
+        app:tashieloader_dotsRadius="20dp"
+        app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
         app:tashieloader_noOfDots="6" />
 
 
