implemented circular rotating loader

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
-    <com.agrawalsuneet.dotsloader.loaders.TashieLoader
+    <!--<com.agrawalsuneet.dotsloader.loaders.TashieLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -36,7 +36,7 @@
         app:tashieloader_dotsDist="5dp"
         app:tashieloader_dotsRadius="20dp"
         app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
-        app:tashieloader_noOfDots="6" />
+        app:tashieloader_noOfDots="6" />-->
 
 
     <!--<com.agrawalsuneet.dotsloader.loaders.LazyLoader
@@ -95,7 +95,6 @@
         app:loader_selectedColor="@color/pink_selected"
         app:loader_selectedRadius="20dp" />-->
 
-
     <!--<com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -106,7 +105,6 @@
         app:loader_dotsDist="6dp"
         app:loader_isSingleDir="true"
         app:loader_selectedColor="@color/blue_selected" />-->
-
 
     <!--<com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
         android:layout_width="wrap_content"
@@ -132,14 +130,30 @@
         app:loader_selectedColor="@color/purple_selected"
         app:loader_showRunningShadow="true" />-->
 
-    <!-- <com.agrawalsuneet.dotsloader.loaders.CircularDotsLoader
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         app:loader_animDur="1000"
-         app:loader_bigCircleRadius="42dp"
-         app:loader_circleRadius="14dp"
-         app:loader_defaultColor="@color/blue_delfault"
-         app:loader_selectedColor="@color/blue_selected"
-         app:loader_showRunningShadow="true" />-->
+    <com.agrawalsuneet.dotsloader.loaders.CircularDotsLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:loader_animDur="1000"
+        app:loader_bigCircleRadius="42dp"
+        app:loader_circleRadius="14dp"
+        app:loader_defaultColor="@color/blue_delfault"
+        app:loader_selectedColor="@color/blue_selected"
+        app:loader_showRunningShadow="true" />
+
+    <com.agrawalsuneet.dotsloader.basicviews.CircularLoaderBaseView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:loader_animDur="1000"
+        app:loader_bigCircleRadius="42dp"
+        app:loader_circleRadius="14dp"
+        app:loader_defaultColor="@color/blue_delfault"
+        app:loader_selectedColor="@color/blue_selected" />
+
+    <com.agrawalsuneet.dotsloader.loaders.RotatingCircularDotsLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp" />
 
 </LinearLayout>
