--- a/app/src/main/res/layout/activity_main_3.xml
+++ b/app/src/main/res/layout/activity_main_3.xml
@@ -8,7 +8,7 @@
     android:background="@color/grey_cool"
     android:orientation="vertical">
 
-    <!--<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:rotatingcircular_animDur="4000" />-->
+        app:rotatingcircular_animDur="4000" />
 
 
 </LinearLayout>
