--- a/app/src/main/res/layout/activity_main_zee.xml
+++ b/app/src/main/res/layout/activity_main_zee.xml
@@ -1,93 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#777777"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
-    <!--<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
+        <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:trailingcircular_animDelay="50"
-            app:trailingcircular_animDuration="1200"
-            app:trailingcircular_bigCircleRadius="20dp"
-            app:trailingcircular_dotsColor="@color/red"
-            app:trailingcircular_dotsRadius="6dp"
-            app:trailingcircular_noOfTrailingDots="5" />
+            app:zee_animDuration="300"
+            app:zee_distanceMultiplier="3"
+            app:zee_dotsRadius="10dp"
+            app:zee_firstDotsColor="@color/red"
+            app:zee_secondDotsColor="@color/red_default" />
 
-
-        <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
+        <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            app:trailingcircular_animDelay="50"
-            app:trailingcircular_animDuration="1200"
-            app:trailingcircular_bigCircleRadius="20dp"
-            app:trailingcircular_dotsColor="@color/amber"
-            app:trailingcircular_dotsRadius="6dp"
-            app:trailingcircular_noOfTrailingDots="5" />
+            app:zee_animDuration="300"
+            app:zee_distanceMultiplier="3"
+            app:zee_dotsRadius="10dp"
+            app:zee_firstDotsColor="@color/amber"
+            app:zee_secondDotsColor="@color/amber_default" />
 
-        <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
+
+        <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:trailingcircular_animDelay="50"
-            app:trailingcircular_animDuration="1200"
-            app:trailingcircular_bigCircleRadius="20dp"
-            app:trailingcircular_dotsColor="@color/green"
-            app:trailingcircular_dotsRadius="6dp"
-            app:trailingcircular_noOfTrailingDots="5" />
+            app:zee_animDuration="300"
+            app:zee_distanceMultiplier="3"
+            app:zee_dotsRadius="10dp"
+            app:zee_firstDotsColor="@color/green"
+            app:zee_secondDotsColor="@color/green_default" />
 
-    </LinearLayout>-->
+    </LinearLayout>
 
     <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:zee_animDuration="400"
+        app:zee_distanceMultiplier="4"
+        app:zee_dotsRadius="24dp"
+        app:zee_firstDotsColor="@color/blue_selected"
+        app:zee_secondDotsColor="@color/blue_delfault" />
 
-    <!--<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:text="Button" />
-    </LinearLayout>-->
-
-    <!--<com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
+    <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:trailingcircular_animDelay="10"
-        app:trailingcircular_animDuration="1400"
-        app:trailingcircular_bigCircleRadius="30dp"
-        app:trailingcircular_dotsColor="@color/blue_selected"
-        app:trailingcircular_dotsRadius="8dp"
-        app:trailingcircular_noOfTrailingDots="3" />-->
+        app:zee_animDuration="300"
+        app:zee_distanceMultiplier="3"
+        app:zee_dotsRadius="10dp"
+        app:zee_firstDotsColor="@color/grey"
+        app:zee_secondDotsColor="@color/grey_default" />
 
 
 </LinearLayout>
